 * Added convenience method for getting the datestamp of an object
 * Added video preview to abstract pages

2008-07-28 tdb
 * Changed preview to use Lightbox 2 and added support for video previewing

2008-07-29 tdb
 * Refined the $doc->render_preview_link() method
 
2008-08-05 tdb
 * If no mime-type is available default to application/octet-stream
 * Added "download=1" optional parameter for Storage requests

2008-08-06 tdb
 * Chown entities.dtd for eprints and use File::Temp
 * Allow archive file names to contain spaces etc. fixing #3409

2008-08-06 cjg
 * Fixed typo in User.pm s/merge/union/ resolving #3413
 * Fixed most issues in render views resolving #3416, #3417
 * Added the 'local tree' view back into subject browsing.
 * Tidied up the main tables on Items and Review
 * Added "help" rollup to Items and Review to resolve #3418
 * Fixed an "undef" warning in MetaField::Date
 * Started to clean up email for alerts. Still not quite there, but better.
    SHould resolve #3405
 * Fixed issue with the mf dataset crashing when an item is created.
 * Tweak to plugin loader to supress an overzelous warning about a variable
    only being used once.
 * Cleaned up some bugs in "Box" when Javascript was turned off.
 * A couple of new options to Box::render to allow it to override the [+] 
    and [-] icons.
 * EPrint/Staff/Details should now use STAFFONLY workflow, fixing #3411
 * Changed default views to allow null values and so subjects does not have
    a sub-field. 
 * Fixed typo in epadmin --help

2008-08-06 tdb
 * Removing all Admin-configured fields will also remove the 'Misc.' stage,
    fixing 3415
 * Don't dispose scalars returned by Export->export, fixing #3420
 * Escape arguments in Repository::invocation

2008-08-06 cjg
 * Added "permute" option to all bin scripts to allow --verbose etc. to be
    added on the end.
 * Changed -c in gunzip to the first argument in import test data -- this 
    stops a bug which shows up in POSIX compliant mode.