@@ -13,13 +13,12 @@ sub new
 	my $self = $class->SUPER::new( %opts );
 
 	$self->{name} = "Abstract Feed";
+	$self->{icon} = "feed-icon-14x14.png";
 	$self->{visible} = "";
 	
 	return $self;
 }
 
 sub is_feed { return 1; }
-
-sub icon { return "feed-icon-14x14.png"; }
 
 1;
