@@ -368,8 +368,7 @@ sub render_export_bar
 			my $span = $session->make_element( "span", class=>"ep_search_$type" );
 			my $url = $self->export_url( $id );
 			my $a1 = $session->render_link( $url );
-			my $imagesurl = $session->get_repository->get_conf( "rel_path" );
-			my $icon = $session->make_element( "img", src=>"$imagesurl/style/images/".$plugin->icon, alt=>"[$type]", border=>0 );
+			my $icon = $session->make_element( "img", src=>$plugin->icon_url(), alt=>"[$type]", border=>0 );
 			$a1->appendChild( $icon );
 			my $a2 = $session->render_link( $url );
 			$a2->appendChild( $dom_name );
