@@ -26,7 +26,7 @@ sub new
 { place => "eprint_actions_editor_deletion", action => "move_archive", position => 100, },
 { place => "eprint_review_actions", action => "move_archive", postion => 200, },
 	];
-	$self->{action_icon} = { move_archive => "/style/images/action_approve.png" };
+	$self->{action_icon} = { move_archive => "action_approve.png" };
 
 	return $self;
 }
